--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -5900,6 +5900,8 @@ margin-bottom: 50px;;
 .BannerAndBosterMockup .titileDescr h2{
     margin-bottom: 15px;
     text-align: center;
+    font-weight: 800;
+    font-size: 40px;
 }
 .BannerAndBosterMockup .titileDescr .descriptionPara{
     margin: auto;
@@ -6171,6 +6173,7 @@ margin-bottom: 20px;
     border-bottom-style: double;
     color: #ffffff;
     text-transform: capitalize;
+    font-size: 30px;
     border-color: #eac97a;
 }
 .CallDesignserBoxxPage .titileDescr .descriptionPara{
@@ -6290,7 +6293,7 @@ margin-bottom: 20px;
 		transition: all 0.6s;
 		border-radius: 0;
 		position: relative;
-		height: 100vh;
+		height: 68vh;
 	}
 	.miliods {
 		padding-right: 2.5rem;
@@ -6310,7 +6313,7 @@ margin-bottom: 20px;
 		padding: 0 2rem;
 	}
 	.home-slider .item {
-		height: 100vh;
+		height: 68vh;
 	}
 	.lg-heading {
 		font-size: 65px;
