--- a/templates/CallSeniorDesigner.html
+++ b/templates/CallSeniorDesigner.html
@@ -108,11 +108,17 @@ color: #000;
 								<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 									<div class="titileDescr">
 										<div class="forflexx">
-											<h2>Senior Designers team At your Service</h2>
+											<h2>Senior Designers Team At Your Service - 1 Hour Call</h2>
 											<div class="descriptionPara">
-												<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-												<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-												<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+												<p>Harness the expertise of our Senior Designers Team, ready to elevate your visions within just 1 hour. Our dedicated team of seasoned professionals is primed to provide top-tier design solutions that capture your essence and resonate with your audience.</p>
+												<p><strong>Fast And Quick Designer Services - Unmatched Excellence in Every Hour</strong></p>
+												<p>Experience rapid yet unparalleled design services tailored to your unique needs. Our commitment to swift delivery doesn't compromise quality; it ensures that your designs are crafted meticulously within the span of just one hour.</p>
+												<p><strong>Connecting with FuryDGP - Transforming Ideas into Exceptional Designs
+												</strong></p>
+												<p>FuryDGP is your gateway to transcendent design solutions. Our Senior Designer Team is here to collaborate and materialize your creative aspirations. Whether it's for branding, websites, or specialized projects, our expert team is poised to craft exceptional designs that captivate and inspire.</p>
+												<p><strong>Inviting Our Senior Design Experts - Unleash Creativity, Inspire Brilliance</strong></p>
+												<p>Experience the extraordinary with our team of senior designers. Your project deserves the touch of expertise and values-driven craftsmanship that defines FuryDGP. Let our dedicated experts create and inspire designs tailored to your unique vision.</p>
+												<p>Book Now and Witness Design Excellence</p>
 											</div>
 										</div>
 									</div>
@@ -193,11 +199,7 @@ color: #000;
 															<div class="notsBoxCallEcpert">
 																<ul>
 																	<li><p>
-																		live chat with your designer
-																		lorem ipsum dolor sit amet,
-																		consectetur adipiscing elit,
-																		sed do eiusmod tempor incididunt
-																		ut labore et dolore magna aliqua.
+																		Coordinate timing that suits both you and the designer, confirm promptly, and be punctual. Prepare ahead to make the most of your meeting time.
 																	</p></li>
 																	
 																</ul>
@@ -257,7 +259,7 @@ color: #000;
 							  <div class="row">
 								<div class="col-lg-12 col-md-12">
 								  <div class="mediaProductionDescriptuion">
-									<h1>Delivary and hipping and pickup is avilabel</h1>
+									<h1>Delivery, Shipping and pickup are available</h1>
 								  </div>
 								</div>
 								
