--- a/templates/ChooseDesigner.html
+++ b/templates/ChooseDesigner.html
@@ -29,7 +29,7 @@
                             <div class="chosedesinerBox">
 								<a href="{% url 'call_expert:callEpertTwo' %}">
 								<div class="titile">
-									<h2> "Connect with Design Experts! Let's Elevate Your Team's Creativity!" </h2>
+									<h2> Call A Designer </h2>
 								</div>
 								<div class="boxoxoBody">
 									<div class="descriptionPara">
@@ -44,7 +44,7 @@
                             <div class="chosedesinerBox">
 								<a href="{% url 'call_expert:call_senior_designer' %}">
 								<div class="titile">
-									<h2>"Connect with Design Experts! Let's Elevate Your Team's Creativity!" </h2>
+									<h2>Call Expert Designer </h2>
 								</div>
 								<div class="boxoxoBody">
 									<div class="descriptionPara">
