--- a/templates/PosterAndBanners.html
+++ b/templates/PosterAndBanners.html
@@ -27,7 +27,7 @@
 			<div class="BannerAndBosterMockup">
 				<div class="container">
 					<div class="titileDescr">
-						<h2>Coming Soon</h2>
+						<h2>COMING SOON</h2>
 						<!-- <h2>Do you have a specific theme, purpose, or content for the poster in mind?</h2> -->
 						<div class="descriptionPara" style="display: none;">
 							<p class="">Knowing this will help in creating a design that suits your needs. Lamination - Protect with a durable layer. Paper Type - Choose from glossy, matte & more. Orientation - Portrait or landscape? Size - A3, A2, A1, or custom dimensions. Mounting - Select your preferred option. Quantity - Specify the number needed. Upload Your Design - Ready to print!"</p>
