--- a/templates/callEpertTwo.html
+++ b/templates/callEpertTwo.html
@@ -110,11 +110,14 @@ color: #000;
 								<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 									<div class="titileDescr">
 										<div class="forflexx">
-											<h2>Fast and Quick Designers Services</h2>
+											<h2>Fast and Quick Designer Services in 10 Minutes</h2>
 											<div class="descriptionPara">
-												<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-												<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-												<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+												<p>Need a design solution ASAP? Our lightning-fast designers are here to deliver swift and top-notch services within just 10 minutes. Get ready for efficient, high-quality designs that meet your needs in record time.</p>
+												<p><strong>Connecting with FuryDGP for Design Excellence</strong></p>
+												<p>At FuryDGP, we specialize in delivering expert design solutions promptly. Our dedicated team ensures seamless communication and collaboration to bring your visions to life. Whether it's a logo, website, or marketing collateral, our designers are poised to create exceptional outcomes that resonate with your brand.</p>
+												<p><strong>Invite our Design Experts to Elevate Your Vision</strong></p>
+												<p>Bring your ideas to fruition with our expert design team. Craving a stunning logo or a captivating website? Let our skilled designers transform your concepts into captivating visuals. Plus, we're all about values – delivering excellence, creativity, and reliability in every project.</p>
+												<p>Ready to Experience Design Excellence? Book Now!</p>
 											</div>
 										</div>
 									</div>
@@ -122,7 +125,7 @@ color: #000;
 							</div>
 						</div>
 						<div class="bookTitle">
-							<h2>Book Now for 15 minutes call with A Designer for only 6$</h2>
+							<h2>Book Now for 10 minutes call with A Designer for only 6$</h2>
 						
 						</div>
 						<div class="row align-items-start justify-content-between">
@@ -197,11 +200,7 @@ color: #000;
 															<div class="notsBoxCallEcpert">
 																<ul>
 																	<li><p>
-																		live chat with your designer
-																		lorem ipsum dolor sit amet,
-																		consectetur adipiscing elit,
-																		sed do eiusmod tempor incididunt
-																		ut labore et dolore magna aliqua.
+																		Coordinate timing that suits both you and the designer, confirm promptly, and be punctual. Prepare ahead to make the most of your meeting time.
 																	</p></li>
 																	
 																</ul>
@@ -265,7 +264,7 @@ color: #000;
 							  <div class="row">
 								<div class="col-lg-12 col-md-12">
 								  <div class="mediaProductionDescriptuion">
-									<h1>Delivary and hipping and pickup is avilabel</h1>
+									<h1>Delivery, Shipping and pickup are available</h1>
 								  </div>
 								</div>
 								
