--- a/templates/custom.html
+++ b/templates/custom.html
@@ -96,7 +96,7 @@
                 <li><a href="{% url 'home:home' %}">Home</a></li>
                 <li>
                   <a href="{% url 'product:self_customization' %}"
-                    >customize</a
+                    >Customize</a
                   >
                 </li>
                 <li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters page</a></li>
