--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -73,23 +73,35 @@
           <p>As a user of this site, it is your responsibility to maintain the confidentiality of your account passwords and restrict access to your device. Please ensure that your browser is compatible with 128-bit SSL for enhanced security.</p>
           <p>To make purchases on FuryDGP.com, individuals must be over 18 years of age. If you are under 18, you must obtain explicit permission and be accompanied by an adult to complete any transactions on the site.</p>
 
-          <h2 class="ft-medium mb-4">PRIVACY POLICY</h2>
-          <p>Our Commitment To Privacy
-            We highly value your privacy. To enhance the protection of your privacy, we present this notice to clarify our online information practices and the choices you can make regarding the collection and utilization of your information.
-            </p>
-            <p>What information do we collect</p>
-            <p>How do we use your information</p>
-            <p>With whom is your information shared</p>
-            <p>Cookies and other technologies used</p>
-            <p>How we protect your information</p>
-            <p>Visiting FuryDGP.com from outside of the United States</p>
-            <p>How to contact us</p>
-            <p>Information That We Collect</p>
-            <p>FuryDGP collects information to fulfill the goods and services you request and enhance your online shopping experience. The information we collect generally consists of the details you provide to us when creating an online account or processing your order. This may encompass your name, email address, telephone number, billing and shipping addresses, and payment information.</p>
-            <p>Additionally, information may be obtained through technology, such as a cookie placed on your computer during your website visit. This includes details like your Internet Protocol (IP) address, device type, device operating system and browser type, a unique device identifier, referring website addresses, your website navigation path, and other session-related information.</p>
-            <p>Other identifying information you may provide includes photos and images uploaded to FuryDGP.com when creating designs, as well as tags, posts, comments, reviews, shared images, or photos posted on social media platforms endorsing FuryDGP products or services.</p>
-          
-          
+          <h2 class="ft-medium mb-4">Privacy Policy - Our Firm Commitment to Your Privacy</h2>
+          <p>We hold your privacy in the highest regard and have taken substantial measures to fortify its protection. This notice serves to elucidate our online information practices and provides you with options concerning the collection and utilization of your data.</p>
+
+          <p><strong>Information Collection</strong></p>
+          <p>We collect data essential to fulfill your requested goods and services while augmenting your online shopping journey. This typically encompasses details provided when setting up an online account or processing an order, including your name, email address, phone number, billing and shipping addresses, and payment information.</p>
+          <p><strong>Usage of Information:</strong></p>
+          <p>The information gathered is used primarily to cater to your requests for products and services, while also refining your online shopping experience.</p>
+          <p><strong>Sharing of Information:</strong></p>
+          <p>Your information is handled with utmost care and is not shared with third parties without your explicit consent, except where required for service provision or legal compliance.</p>
+          <p><strong>Cookies and Technological Tools:</strong></p>
+          <p>We utilize cookies and similar technologies to improve site functionality and personalize your experience. These tools also aid in gathering information about site usage to refine our services.</p>
+          <p><strong>Protection of Information:</strong></p>
+          <p>We have implemented robust security measures to safeguard your information against unauthorized access, alteration, disclosure, or destruction.</p>
+          <p><strong>International Visitors:</strong></p>
+          <p>For visitors accessing FuryDGP.com from outside the United States, please note that your information may be processed in the United States, subject to its laws, which may differ from your country's regulations.</p>
+          <p><strong>Contact Information:</strong></p>
+          <p>If you have any queries or concerns regarding our privacy practices, please contact us info@furydgp.com.</p>
+
+
+
+
+
+
+
+
+
+
+
+
             <h2 class="ft-medium mb-4">How We Use Your Information</h2>
             <p>Order Processing: Information you provide for order placement is exclusively used to fulfill that order. We do not share this information with external parties except as required to complete the order. Uploaded images, photos, logos, quotes, or other materials are used solely for the production or processing of your order.</p>
             <p>Communication: Return email addresses are utilized to respond to received emails, and provided phone numbers are used to address queries regarding your order.</p>
@@ -106,9 +118,13 @@
 
 
           <h2 class="ft-medium mb-4">Cookies & Similar Technologies</h2>
+          <p>Cookies, as discreet text files, are placed on your device to retain data accessible by a web server within the cookie's specific domain. At FuryDGP, these cookies are instrumental in preserving your preferences and settings, recording essential details about your website session, and ensuring seamless authentication for your account. To fully benefit from our services, it's essential to enable cookie acceptance in your browser settings if not already configured.</p>
 
-            <p>Cookies are small text files placed on your device to store data retrievable by a web server in the domain that set the cookie. FuryDGP employs cookies to store preferences and settings, record information about your website session, and enable you to stay signed in to your account. Therefore, it is necessary to set your browser to accept cookies if not done already.</p>
-            <p>The cookie does not store personal or secure information. Internet browser controls can limit websites' ability to use cookies, and you can revoke consent by deleting or blocking cookies.</p>
+
+
+
+
+
 
 
 
@@ -125,21 +141,29 @@
 
           <h2 class="ft-medium mb-4">Visiting FuryDGP.com from Outside the United States</h2>
 
-            <p>The FuryDGP.com website operates and is maintained in the United States. If you access our website from outside the United States, be aware that your information may be transferred to, stored, and processed in the United States, where our servers are located, and our central database operates. By using our website, you agree and consent to the transfer and storage of your information as outlined in this policy.
-              Your Rights under the General Data Protection Regulation (GDPR)
-              </p>
 
-              <p>If you access our website from the EEA or an EU country, you possess the following rights under the GDPR. Some of these rights are intricate, and our summaries may not include all details. Please refer to laws and guidance from regulatory authorities about the General Data Protection Regulation (GDPR) (EU) 2016/679 for a complete explanation of these rights:</p>
+            <p>FuryDGP.com operates and is maintained within the United States. Should you access our website from outside this jurisdiction, please note that your information may be transferred, stored, and processed in the United States, where our servers and central database are located. By utilizing our website, you consent to this transfer and storage of your information as detailed in this policy.</p>
+            <p><strong>Your Rights under the General Data Protection Regulation (GDPR)</strong></p>
+            <p>If you access our website from the European Economic Area (EEA) or an EU country, you are entitled to specific rights under the GDPR. These rights include:</p>
+            <p>Right to Access: Confirm whether we have collected your personal information, access your data, and receive a copy if collected.
+              Right to Rectification: Request completion, correction, or updating of any inaccurate or incomplete data about you.
+              Right to Erasure: In certain cases, request the prompt erasure of your personal data.</p>
+              <p>Right to Restrict Processing: In certain cases, restrict the processing of your data.
+                Right to Object to Processing: In certain cases, object to our processing of your personal data.</p>
+                <p>Right to Data Portability: Obtain your personal data in a structured, commonly used format for transfer to another party.
+                  Right to Withdraw Consent: If the legal basis for storing or processing your personal information is consent, withdraw your consent at any time.</p>
+                  <p>For queries regarding the collection and usage of your personal information, contact us at info@furydgp.com. If your concerns remain unresolved, you retain the right to lodge a complaint with your local data protection authority.</p>
 
-              <p>Right to Access: Confirm whether we have collected your personal information, and if so, access your personal information and receive a copy.</p>
-                <p>Right to Rectification: Have any inaccurate data about you completed, corrected, or updated if incomplete, incorrect, or outdated.</p>
-                <p> Right to Erasure: In some cases, have your personal data erased without delay.</p>
-                <p>Right to Restrict Processing: In some cases, restrict the processing of your data.</p>
-                <p>Right to Object to Processing: In some cases, object to our processing of your personal data.</p>
-                <p>Right to Data Portability: Receive your personal data from us in a structured, commonly used format for transfer to another party.</p>
-                <p>Right to Withdraw Consent: If the legal basis for storing or processing your personal information is consent, withdraw that consent at any time.</p>
-                <p>For inquiries about the collection and use of your personal information, contact us at info@furydgp.com. If your inquiry remains unresolved, you have the right to submit a complaint to your local data protection authority.</p>
-      
+
+
+
+
+
+
+
+
+
+
 
           <h2 class="ft-medium mb-4">CALIFORNIA CONSUMER PRIVACY ACT DISCLOSURES</h2>
        
