--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
 						<div class="nav-menus-wrapper" style="transition-property: none;">
 							<ul class="nav-menu">
 							     <li><a href="{% url 'home:home' %}">Home</a></li>
-								<li><a href="{% url 'product:self_customization' %}">customize</a></li>
+								<li><a href="{% url 'product:self_customization' %}">Customize</a></li>
 
 								<li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters</a></li>
 								
