--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,24 +37,22 @@
 								
 									<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
 										<div class="card-wrap-body mb-4">
-											<h4 class="ft-medium mb-3 theme-cl">Make a Call</h4>
-											<p>1354 Green Street Nashville Drive Dodge City,<br> KS 67801 United States</p>
-											<p class="lh-1"><span class="text-dark ft-medium">Email:</span> dhananjaypreet@gmail.com</p>
+											<h4 class="ft-medium mb-3 theme-cl">Address</h4>
+											<p>Uhaul offices 24540 i-45 C004 Spring, TX, 77386</p>
+											<!-- <p class="lh-1"><span class="text-dark ft-medium">Email:</span> info@furydpg.com</p> -->
 										</div>
 										
 										<div class="card-wrap-body mb-3">
 											<h4 class="ft-medium mb-3 theme-cl">Make a Call</h4>
 											<h6 class="ft-medium mb-1">Customer Care:</h6>
-											<p class="mb-2">+91 458 753 6924</p>
-											<h6 class="ft-medium mb-1">Careers:</h6>
-											<p>+91 965 784 23658</p>
+											<p class="mb-2">+1-(832) 800-4025</p>
+											
 										</div>
 										
 										<div class="card-wrap-body mb-3">
 											<h4 class="ft-medium mb-3 theme-cl">Drop A Mail</h4>
 											<p>Fill out our form and we will contact you within 24 hours.</p>
-											<p class="lh-1 text-dark">dhananjaypreet@gmail.com</p>
-											<p class="lh-1 text-dark">dhananjaypreet@gmail.com</p>
+											<p class="lh-1 text-dark">info@furydpg.com</p>
 										</div>
 									</div>
 									
