--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -6157,6 +6157,7 @@ margin-bottom: 20px;
     display: block;
     height: auto;
     width: 100%;
+    margin-top: 50px;
 }
 .CallDesignserBoxxPage .ImageDesigneeer .mage img{
     display: block;
@@ -6173,7 +6174,7 @@ margin-bottom: 20px;
     border-bottom-style: double;
     color: #ffffff;
     text-transform: capitalize;
-    font-size: 30px;
+    font-size: 25px;
     border-color: #eac97a;
 }
 .CallDesignserBoxxPage .titileDescr .descriptionPara{
@@ -6181,6 +6182,8 @@ margin-bottom: 20px;
 }
 .CallDesignserBoxxPage .titileDescr .descriptionPara p{
     text-align: start !important;
+    margin: 0;
+    font-size: 15px;
 }
 
 .bookTitle{
