--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 						<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 							<div class="sec_title position-relative text-center">
 								
-								<h1 class="ft-bold pt-3">Fury Digital Print</h1>
+								<h1 class="ft-bold pt-3">Fury Digital Printing</h1>
 							</div>
 						</div>
 					</div>
