--- a/templates/products.html
+++ b/templates/products.html
@@ -214,8 +214,8 @@
                                                         <a href="javascript:void(0);" class="prd_btn_square snackbar-wishlist" data-toggle="tooltip" data-placement="top" title="Wishlist">
                                                             <i class="lni lni-heart"></i>
                                                         </a> -->
-                                                        <a href="javascript:void(0);" class="prd_btn_square snackbar-addcart" data-toggle="tooltip" data-placement="top" title="Add To Cart">
-                                                            <i class="lni lni-shopping-basket"></i>
+                                                        <a href="{% url 'product:self_customization_product' product.id %}" class="prd_btn_square"  title="Custom">
+                                                            <i class="fas fa-edit"></i>
                                                         </a>
                                                     </div>
                                                 </div>
