--- a/templates/base.html
+++ b/templates/base.html
@@ -204,7 +204,7 @@
 								<div class="footer_widget">
 								  <h4 class="widget_title">Company</h4>
 								  <ul class="footer-menu">
-									<li><a href="#">About</a></li>
+									<li><a href="{% url 'home:about' %}">About</a></li>
 									<li><a href="{% url 'home:privacy' %}">Terms & Conditions - Security</a></li>
 								  </ul>
 								</div>
