--- a/templates/custom.html
+++ b/templates/custom.html
@@ -133,7 +133,7 @@
                 </li>
                 <li>
 									<a href="{% url 'product:card' %}" >
-										<i class="lni lni-shopping-basket"></i><span class="dn-counter theme-bg">1</span>
+										<i class="lni lni-shopping-basket"></i><span class="dn-counter theme-bg"></span>
 									</a>
 								</li>
 
@@ -2013,7 +2013,7 @@
                 <div class="footer_widget">
                   <h4 class="widget_title">Company</h4>
                   <ul class="footer-menu">
-                    <li><a href="#">About</a></li>
+                    <li><a href="{% url 'home:about' %}">About</a></li>
 									  <li><a href="{% url 'home:privacy' %}">Terms & Conditions - Security</a></li>
                   </ul>
                 </div>
