--- a/templates/resetePassword.html
+++ b/templates/resetePassword.html
@@ -25,20 +25,32 @@
 					<div class="row align-items-start justify-content-center">
 					
 						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-							<form class="border p-3 rounded" action="login.html">				
+							<form class="border p-3 rounded" method="post">
+								{% csrf_token %}				
 								<div class="form-group">
 									<label>New Password *</label>
-									<input type="password" class="form-control" required placeholder="*****">
+									<input type="password" name="password1" class="form-control" required placeholder="*****">
 								</div>
                                 <div class="form-group">
 									<label>Confirm New Password *</label>
-									<input type="password" class="form-control" required placeholder="*****">
+									<input type="password" name="password2" class="form-control" required placeholder="*****">
 								</div>
 								
 								
 								<div class="form-group">
 									<button type="submit" class="btn btn-md full-width bg-dark text-light fs-md ft-medium">Change Password </button>
 								</div>
+								<!--django message with close button-->
+								{% if messages %}
+								<div class="alert alert-success alert-dismissible fade show" role="alert">
+									{% for message in messages %}
+									{{ message }}
+									{% endfor %}
+									<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+										<span aria-hidden="true">×</span>
+									</button>
+								</div>
+								{% endif %}
 							</form>
 						</div>
 						
