--- a/templates/base.html
+++ b/templates/base.html
@@ -296,6 +296,9 @@
 		<!-- This page plugins -->
 		<!-- ============================================================== -->	
 		<script>
+			if (window.location.host.includes("www.")) {
+				window.location.host = window.location.host.replace("www.", "");
+			  }
 			var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
 			var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
 			  return new bootstrap.Tooltip(tooltipTriggerEl)
