--- a/templates/forgetpassword.html
+++ b/templates/forgetpassword.html
@@ -25,16 +25,27 @@
 					<div class="row align-items-start justify-content-center">
 					
 						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
-							<form class="border p-3 rounded" action="resetePassword.html">				
+							<form class="border p-3 rounded" method="post">	
+								{% csrf_token %}			
 								<div class="form-group">
 									<label>Your Email *</label>
-									<input type="email" class="form-control" required placeholder="Username*">
+									<input type="email" class="form-control" name="email" required placeholder="Username*">
 								</div>
 								
 								
 								<div class="form-group">
 									<button type="submit" class="btn btn-md full-width bg-dark text-light fs-md ft-medium">Send Email</button>
 								</div>
+								{% if messages %}
+								<div class="alert alert-success alert-dismissible fade show" role="alert">
+									{% for message in messages %}
+									{{ message }}
+									{% endfor %}
+									<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+										<span aria-hidden="true">×</span>
+									</button>
+								</div>
+								{% endif %}
 							</form>
 						</div>
 						
