--- a/templates/index.html
+++ b/templates/index.html
@@ -33,14 +33,14 @@
 						<div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-4">
 							<div class="cats_side_wrap text-center mx-auto mb-3">
 								<div class="sl_cat_01"><div class="d-inline-flex align-items-center justify-content-center p-4 circle mb-2"><a href="{% url 'product:self_customization' %}" class="d-block"><img src="{% static 'assets/img/newImages/New_Icons/selfcustomize.png' %}" class="img-fluid" width="40" alt=""></a></div></div>
-								<div class="sl_cat_02"><h6 class="m-0 ft-medium fs-sm"><a href="{% url 'product:self_customization' %}">Custmization</a></h6></div>
+								<div class="sl_cat_02"><h6 class="m-0 ft-medium fs-sm"><a href="{% url 'product:self_customization' %}">Customize</a></h6></div>
 							</div>
 						</div>
 						
 						<div class="col-xl-2 col-lg-2 col-md-3 col-sm-6 col-4">
 							<div class="cats_side_wrap text-center mx-auto mb-3">
 								<div class="sl_cat_01"><div class="d-inline-flex align-items-center justify-content-center p-4 circle mb-2"><a href="{% url 'banner_and_posters:banner_and_posters' %}" class="d-block"><img src="{% static 'assets/img/newImages/New_Icons/banner.png' %}" class="img-fluid" width="40" alt=""></a></div></div>
-								<div class="sl_cat_02"><h6 class="m-0 ft-medium fs-sm"><a href="{% url 'banner_and_posters:banner_and_posters' %}">Posters & Banners</a></h6></div>
+								<div class="sl_cat_02"><h6 class="m-0 ft-medium fs-sm"><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters</a></h6></div>
 							</div>
 						</div>
 						
