--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -1560,6 +1560,7 @@ nav a:hover {
     font-size:16px;
 	letter-spacing: .1px;
 	color:#aaa;
+    text-transform: capitalize;
 }
 .header.header-dark .nav-menu>li>a, .headerd.header-dark .nav-menu>li>a{
 	padding:15px 18px;
