--- a/templates/PosterAndBanners.html
+++ b/templates/PosterAndBanners.html
@@ -8,11 +8,10 @@
 		<div class="row align-items-center justify-content-center">
 			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 				<div class="text-center py-5 mt-3 mb-3">
-					<h1 class="ft-medium mb-3">Poster & Banners</h1>
+					<h1 class="ft-medium mb-3">Signs & Posters</h1>
 					<ul class="shop_categories_list m-0 p-0">
 						<li><a href="{% url 'home:home' %}">Home</a></li>
-						<li><a href="#">Poster & Banners</a></li>
-					</ul>
+						<li><a href="#">Signs & Posters
 				</div>
 			</div>
 		</div>
