--- a/templates/custom.html
+++ b/templates/custom.html
@@ -99,7 +99,7 @@
                     >Customize</a
                   >
                 </li>
-                <li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters page</a></li>
+                <li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters </a></li>
                 <li>
                   <a href="{% url 'call_expert:call_expert' %}">Call A Designer</a>
                 </li>
@@ -1989,8 +1989,8 @@
                   <h4 class="widget_title">Site Map</h4>
                   <ul class="footer-menu">
                     <li><a href="{% url 'home:home' %}">Home</a></li>
-                    <li><a href="{% url 'product:self_customization' %}">Self Custmization</a></li>
-                    <li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters page</a></li>
+                    <li><a href="{% url 'product:self_customization' %}">Customize</a></li>
+                    <li><a href="{% url 'banner_and_posters:banner_and_posters' %}">Signs and posters</a></li>
                     <li><a href="{% url 'call_expert:call_expert' %}">Call Design</a></li>
                     <li><a href="{% url 'product:ordaring' %}">Orders</a></li>
                   </ul>
