--- a/templates/CallSeniorDesigner.html
+++ b/templates/CallSeniorDesigner.html
@@ -259,7 +259,7 @@ color: #000;
 							  <div class="row">
 								<div class="col-lg-12 col-md-12">
 								  <div class="mediaProductionDescriptuion">
-									<h1>Delivery, Shipping and pickup are available</h1>
+									<h1>Delivery, Shipping and pickup are available at checkout</h1>
 								  </div>
 								</div>
 								
