--- a/templates/custom.html
+++ b/templates/custom.html
@@ -2754,7 +2754,7 @@
             <div class="row">
             <div class="col-lg-12 col-md-12">
               <div class="mediaProductionDescriptuion">
-                <h1>Delivery, Shipping and pickup are available</h1>
+                <h1>Delivery, Shipping and pickup are available at checkout</h1>
               </div>
             </div>
             
